# luxtronik2-modbus-proxy

./: .gitignore  CLAUDE.md  Dockerfile  README.de.md  README.md  config.example.yaml  docker-compose.yml  hacs.json  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml  publish.yml  validate.yml
.planning/: HANDOFF.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-core-proxy/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-integration-ready-register-map/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-HUMAN-UAT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-documentation-and-release/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-pypi-publish-hacs-scaffold/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-coordinator-config-flow/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-HUMAN-UAT.md  05-RESEARCH.md  05-UI-SPEC.md  05-VERIFICATION.md
.planning/phases/06-sensor-entities/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-HUMAN-UAT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-control-entities-translations/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-HUMAN-UAT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-new-repo-extraction-setup/: 08-01-PLAN.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  SUMMARY.md
contrib/: luxtronik2-modbus-proxy.service
custom_components/luxtronik2_modbus_proxy/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  select.py  sensor.py  strings.json
docs/de/: evcc-integration.md  ha-coexistence.md  index.md  quickstart.md  systemd.md  user-guide.md
docs/en/: evcc-integration.md  ha-coexistence.md  index.md  quickstart.md  systemd.md  user-guide.md
docs/examples/: dashboard-waermepumpe.yaml
src/luxtronik2_modbus_proxy/: __init__.py  config.py  luxtronik_client.py  main.py  modbus_server.py  polling_engine.py  register_cache.py  register_map.py
tests/: __init__.py
tests/integration/: __init__.py  test_proxy_mock.py
tests/unit/: __init__.py  test_config.py  test_number.py  test_register_cache.py  test_register_definitions.py  test_register_map.py  test_select.py  test_sensor.py  test_sg_ready.py
(+22 files in other folders)
