[project]
name = "luxtronik2-modbus-proxy"
version = "1.1.0"
description = "Modbus TCP proxy for Luxtronik 2.0 heat pump controllers"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
keywords = ["luxtronik", "modbus", "heat-pump", "evcc", "home-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
]
dependencies = [
    "luxtronik==0.3.14",
    "pymodbus==3.12.1",
    "pydantic>=2.12,<3",
    "pydantic-settings[yaml]>=2.13,<3",
    "structlog>=25.0",
    "PyYAML>=6.0",
]

[project.scripts]
luxtronik2-modbus-proxy = "luxtronik2_modbus_proxy.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/OWNER/luxtronik2-modbus-proxy"
Repository = "https://github.com/OWNER/luxtronik2-modbus-proxy"
Documentation = "https://OWNER.github.io/luxtronik2-modbus-proxy"
"Bug Tracker" = "https://github.com/OWNER/luxtronik2-modbus-proxy/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.10"
